--- a/angularapp/src/app/clientes/clientes.component.html
+++ b/angularapp/src/app/clientes/clientes.component.html
@@ -1,19 +1,21 @@
 <h1>{{ title }}</h1>
 <div class="row">
   <div class="col-md-12">
-    <a type="button" class="btn btn-primary btn--raised" href="/cliente">Agregar cliente</a>
+    <a type="button" class="btn btn-primary btn--raised" href="cliente">Agregar cliente</a>
     <div *ngIf="!clientes" class="alert alert-primary" role="alert">
       No hay datos para mostrar.
     </div>
     <table class="table" *ngIf="clientes">
       <thead>
-      <td>Id</td>
-      <td>Nombre</td>
-      <td>Dirección</td>
-      <td>Teléfono</td>
-      <td>Identificación</td>
-      <td>Tipo persona</td>
-      <td>Acciones</td>
+        <tr>
+          <td>Id</td>
+          <td>Nombre</td>
+          <td>Dirección</td>
+          <td>Teléfono</td>
+          <td>Identificación</td>
+          <td>Tipo persona</td>
+          <td>Acciones</td>
+        </tr>
       </thead>
       <tbody>
         <tr *ngFor="let item of clientes" [ngClass]="{'table-success': item.tipoPersona === 'Juridica', 'table-warning': item.tipoPersona === 'Natural'}">
