--- a/angularapp/src/app/empleado/empleado.component.html
+++ b/angularapp/src/app/empleado/empleado.component.html
@@ -3,6 +3,22 @@
 <div class="card">
   <div class="card-body">
     <form [formGroup]="detalleForm" (ngSubmit)="onSubmit()">
+
+      <!--Identificacion-->
+      <div class="form-group">
+        <label>Identificación</label>
+        <input type="text"
+               formControlName="identificacion"
+               class="form-control"
+               [ngClass]="{ 'is-invalid': subido && f['identificacion'].errors }" />
+        <i class="form-group__bar"></i>
+        <div *ngIf="subido && f['identificacion'].errors" class="invalid-tooltip">
+          <div *ngIf="f['identificacion'].errors['required']">
+            Identificacion requerida
+          </div>
+        </div>
+      </div>
+
       <!--Nombre-->
       <div class="form-group">
         <label>Nombre</label>
@@ -18,17 +34,17 @@
         </div>
       </div>
 
-      <!--Direccion-->
+      <!--Apellidos-->
       <div class="form-group">
-        <label>Dirección</label>
+        <label>Apellidos</label>
         <input type="text"
-               formControlName="direccion"
+               formControlName="apellidos"
                class="form-control"
-               [ngClass]="{ 'is-invalid': subido && f['direccion'].errors }" />
+               [ngClass]="{ 'is-invalid': subido && f['Apellidos'].errors }" />
         <i class="form-group__bar"></i>
-        <div *ngIf="subido && f['direccion'].errors" class="invalid-tooltip">
-          <div *ngIf="f['direccion'].errors['required']">
-            Dirección requerida
+        <div *ngIf="subido && f['apellidos'].errors" class="invalid-tooltip">
+          <div *ngIf="f['apellidos'].errors['required']">
+            Apellidos requeridos.
           </div>
         </div>
       </div>
@@ -48,36 +64,18 @@
         </div>
       </div>
 
-      <!--Identificacion-->
-      <div class="form-group">
-        <label>Identificación</label>
-        <input type="text"
-               formControlName="identificacion"
-               class="form-control"
-               [ngClass]="{ 'is-invalid': subido && f['identificacion'].errors }" />
-        <i class="form-group__bar"></i>
-        <div *ngIf="subido && f['identificacion'].errors" class="invalid-tooltip">
-          <div *ngIf="f['identificacion'].errors['required']">
-            Identificación requerida
-          </div>
-        </div>
-      </div>
 
-      <!--Tipo Persona-->
+      <!--Direccion-->
       <div class="form-group">
-        <label>Tipo Persona</label>
-        <ng-select formControlName="idTipoPersona"
-                   [items]="tiposPersona"
-                   bindLabel="nombre"
-                   bindValue="idTipoPersona"
-                   class="form-control"
-                   [ngClass]="{ 'is-invalid': subido && f['idTipoPersona'].errors }">
-        </ng-select>
+        <label>Dirección</label>
+        <input type="text"
+               formControlName="direccion"
+               class="form-control"
+               [ngClass]="{ 'is-invalid': subido && f['direccion'].errors }" />
         <i class="form-group__bar"></i>
-        <div *ngIf="subido && f['idTipoPersona'].errors"
-             class="invalid-tooltip">
-          <div *ngIf="f['idTipoPersona'].errors['required']">
-            Tipo Persona requerido
+        <div *ngIf="subido && f['direccion'].errors" class="invalid-tooltip">
+          <div *ngIf="f['direccion'].errors['required']">
+            Dirección requerida
           </div>
         </div>
       </div>
@@ -86,7 +84,7 @@
       <div class="botones-form">
         <button type="button"
                 class="btn btn-secondary btn--raised"
-                [routerLink]="['/clientes']">
+                [routerLink]="['/empleados']">
           Volver
         </button>
         <button [disabled]="cargando" class="btn btn-primary btn--raised">
