--- a/angularapp/src/app/clientes/clientes.component.html
+++ b/angularapp/src/app/clientes/clientes.component.html
@@ -18,7 +18,7 @@
         </tr>
       </thead>
       <tbody>
-        <tr *ngFor="let item of clientes" [ngClass]="{'table-success': item.tipoPersona === 'Juridica', 'table-warning': item.tipoPersona === 'Natural'}">
+        <tr *ngFor="let item of clientes" [ngClass]="{'table-info': item.tipoPersona === 'Juridica', 'table-warning': item.tipoPersona === 'Natural'}">
           <td >{{ item.idCliente }}</td>
           <td>{{ item.nombre }}</td>
           <td>{{ item.direccion }}</td>
